Wifi WebSocket progress

--- a/K7_robot_0v06/data/index.html
+++ b/K7_robot_0v06/data/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ESP32 Web Server</title>
+  <title>Carl 7 - ESP32 Web Server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>ESP32 Web Server</h1>
-  <p>GPIO state: <strong> %STATE%</strong></p>
-  <p><a href="/on"><button class="button">ON</button></a></p>
-  <p><a href="/off"><button class="button button2">OFF</button></a></p>
+  <h1>Carl 7 - ESP32 Web Server</h1>
+  <!-- <p>GPIO state: <strong> %STATE%</strong></p> -->
+  <p><a href="/up"><button class="button">&#x02C4;</button></a></p>
+  <p>
+    <a href="/left"><button class="button">&#x02C2;</button></a>
+    <a href="/down"><button class="button">&#x02C5;</button></a>
+    <a href="/right"><button class="button">&#x02C3;</button></a>
+  </p>
+
 </body>
 </html>
